--- a/pages/Compras/compras.html
+++ b/pages/Compras/compras.html
@@ -33,10 +33,10 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav ms-auto">
                                 <li class="nav-item"><a class="nav-link" href="../../index.html">Inicio</a></li>
-                                <li class="nav-item"><a class="nav-link" href="../pages/remeras.html">Remeras</a></li>
-                                <li class="nav-item"><a class="nav-link" href="../pages/zapatillas.html">Zapatillas</a></li>
-                                <li class="nav-item"><a class="nav-link" href="../pages/pantalones.html">Pantalones</a></li>
-                                <li class="nav-item"><a class="nav-link" href="../pages/contacto.html">Contacto</a></li>
+                                <li class="nav-item"><a class="nav-link" href="../remeras.html">Remeras</a></li>
+                                <li class="nav-item"><a class="nav-link" href="../zapatillas.html">Zapatillas</a></li>
+                                <li class="nav-item"><a class="nav-link" href="../pantalones.html">Pantalones</a></li>
+                                <li class="nav-item"><a class="nav-link" href="../contacto.html">Contacto</a></li>
                             </ul>
                         </div>
                         </div>
@@ -44,7 +44,7 @@
                 </header>
         <main id="mainos">
             
-                <h1 class="h1com">Pago del Artículo</h1>
+                <h1 id="principal">Pago del Artículo</h1>
 
                 <form class="formcom" action="procesar_pago.php" method="post">
                     <label class="labelcom" for="nombre">Nombre:</label>
@@ -66,17 +66,17 @@
                 <div class="footer-col">
                     <h3>Nuestros productos</h3>
                     <ul>
-                    <li><a href="./pages/remeras.html">Remeras</a></li>
-                    <li><a href="./pages/pantalones.html">Pantalones</a></li>
-                    <li><a href="./pages/zapatillas.html">Zapatillas</a></li>
+                    <li><a href="../remeras.html">Remeras</a></li>
+                    <li><a href="../pantalones.html">Pantalones</a></li>
+                    <li><a href="../zapatillas.html">Zapatillas</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h3>aAcerca de nosotros</h3>
                     <ul>
-                    <li><a href="./aboutUs.html">Quiénes somos</a></li>
-                    <li><a href="./politicaPrivacidad.html">Política de privacidad</a></li>
-                    <li><a href="./terminosCondiciones.html">Términos y condiciones</a></li>
+                    <li><a href="../quienes-somos/aboutUs.html">Quiénes somos</a></li>
+                    <li><a href="../quienes-somos/politicaPrivacidad.html">Política de privacidad</a></li>
+                    <li><a href="../quienes-somos/terminosCondiciones.html">Términos y condiciones</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
