--- a/pages/pantalones.html
+++ b/pages/pantalones.html
@@ -30,9 +30,9 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="../pages/inde.html">Remeras</a></li>
-                        <li class="nav-item"><a class="nav-link" href="../pages/zapatillas.html">Zapatillas</a></li>
-                        <li class="nav-item"><a class="nav-link" href="../pages/contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./remeras.html">Remeras</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./zapatillas.html">Zapatillas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
                     </ul>
                 </div>
                 </div>
@@ -40,8 +40,8 @@
         </header>
         
         <main>
-            <h1>Pantalones</h1>
 
+            <h1 id="princi">Pantalones</h1>
             <section class="pantalones">
 
                 <div class="productreme">
@@ -95,8 +95,8 @@
                 <div class="footer-col">
                 <h3>Nuestros productos</h3>
                 <ul>
-                    <li><a href="./zapatillas.html">Remeras</a></li>
-                    <li><a href="./zapatillas.html">Pantalones</a></li>
+                    <li><a href="./remeras.html">Remeras</a></li>
+                    <li><a href="./pantalones.html">Pantalones</a></li>
                     <li><a href="./zapatillas.html">Zapatillas</a></li>
                 </ul>
                 </div>
