--- a/pages/quienes-somos/aboutUs.html
+++ b/pages/quienes-somos/aboutUs.html
@@ -18,21 +18,31 @@
 <html>
 <body>
     <div class="bodyc">
-        <header id="header">
-            <nav>
-                <ul class="container">
-                    <li><div class="logocontainer"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtfL6HKx5Tfe_qK4ZULS629ToP7COap-gaFQ&usqp=CAU" alt="logo de la marca" class="logo"></a></div></li>
-                    <li><a class="hovernav" href="../../index.html">inicio</a></li>
-                    <li><a class="hovernav" href="../remeras.html">Remeras</a></li>
-                    <li><a class="hovernav" href="../zapatillas.html">Zapatillas</a></li>
-                    <li><a class="hovernav" href="../pantalones.html">Pantalones</a></li>
-                </ul>
+        <header id="headerfot">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container">
+                <div class="logocontainer">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtfL6HKx5Tfe_qK4ZULS629ToP7COap-gaFQ&usqp=CAU" alt="logo de la marca" class="logo">
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="../../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../remeras.html">Remeras</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../zapatillas.html">Zapatillas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../pantalones.html">Pantalones</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+                </di>
             </nav>
         </header>
         <main id="mainos">
             <section class="about-uss">
             <div class="about-header">
-                <h2 class="h2os">Quiénes somos</h2>
+                <h1 id="principal">Quiénes somos</h1>
             </div>
             <div class="about-content">
                 <p class="pos">Somos una tienda de ropa especializada en moda urbana. Nuestro objetivo es ofrecer a nuestros clientes prendas de alta calidad a precios asequibles. Trabajamos con marcas reconocidas y diseñadores independientes para ofrecer una amplia variedad de estilos y opciones de vestimenta.</p>
