--- a/pages/quienes-somos/politicaPrivacidad.html
+++ b/pages/quienes-somos/politicaPrivacidad.html
@@ -18,21 +18,31 @@
 <html>
 <body>
     <div class="bodyc">
-        <header id="header">
-            <nav>
-                <ul class="container">
-                    <li><div class="logocontainer"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtfL6HKx5Tfe_qK4ZULS629ToP7COap-gaFQ&usqp=CAU" alt="logo de la marca" class="logo"></a></div></li>
-                    <li><a class="hovernav" href="../../index.html">inicio</a></li>
-                    <li><a class="hovernav" href="../remeras.html">Remeras</a></li>
-                    <li><a class="hovernav" href="../zapatillas.html">Zapatillas</a></li>
-                    <li><a class="hovernav" href="../pantalones.html">Pantalones</a></li>
-                </ul>
+        <header id="headerfot">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container">
+                <div class="logocontainer">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtfL6HKx5Tfe_qK4ZULS629ToP7COap-gaFQ&usqp=CAU" alt="logo de la marca" class="logo">
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="../../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../remeras.html">Remeras</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../zapatillas.html">Zapatillas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../pantalones.html">Pantalones</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+                </di>
             </nav>
         </header>
         <body>
             <div class="bodyc">
                 <main class="mainpol">
-                    <h1 class="h1pol">Políticas de privacidad</h1>
+                    <h1 id="principal">Políticas de privacidad</h1>
                     <section>
                         <h2 class="h2pol">Información que recopilamos</h2>
                             <p class="ppol">En nuestra tienda en línea recopilamos la siguiente información:</p>
@@ -55,9 +65,9 @@
                         <div class="footer-col">
                             <h3>Nuestros productos</h3>
                             <ul>
-                            <li><a href="./pages/remeras.html">Remeras</a></li>
-                            <li><a href="./pages/pantalones.html">Pantalones</a></li>
-                            <li><a href="./pages/zapatillas.html">Zapatillas</a></li>
+                            <li><a href="../remeras.html">Remeras</a></li>
+                            <li><a href="../pantalones.html">Pantalones</a></li>
+                            <li><a href="../zapatillas.html">Zapatillas</a></li>
                             </ul>
                         </div>
                         <div class="footer-col">
