--- a/pages/quienes-somos/terminosCondiciones.html
+++ b/pages/quienes-somos/terminosCondiciones.html
@@ -18,20 +18,31 @@
 <html>
 <body>
     <div class="bodyc">
-        <header id="header">
-            <nav>
-                <ul class="container">
-                    <li><div class="logocontainer"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtfL6HKx5Tfe_qK4ZULS629ToP7COap-gaFQ&usqp=CAU" alt="logo de la marca" class="logo"></a></div></li>
-                    <li><a class="hovernav" href="../../index.html">inicio</a></li>
-                    <li><a class="hovernav" href="../remeras.html">Remeras</a></li>
-                    <li><a class="hovernav" href="../zapatillas.html">Zapatillas</a></li>
-                    <li><a class="hovernav" href="../pantalones.html">Pantalones</a></li>
-                </ul>
+        <header id="headerfot">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container">
+                <div class="logocontainer">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtfL6HKx5Tfe_qK4ZULS629ToP7COap-gaFQ&usqp=CAU" alt="logo de la marca" class="logo">
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="../../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../remeras.html">Remeras</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../zapatillas.html">Zapatillas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../pantalones.html">Pantalones</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+                </di>
             </nav>
         </header>
+
             <main class="mainterm">
                 <div class="containerterm">
-                    <h1 class="h1term">Términos y Condiciones</h1>
+                    <h1 id="principal">Términos y Condiciones</h1>
                 <p class="pterm">Por favor lea estos términos y condiciones cuidadosamente antes de utilizar este sitio web.</p>
                 <ul class="ulterm">
                     <li class="literms">Este sitio web es propiedad de [Nombre de la empresa].</li>
@@ -51,9 +62,9 @@
                         <div class="footer-col">
                             <h3>Nuestros productos</h3>
                             <ul>
-                                <li><a href="./pages/remeras.html">Remeras</a></li>
-                                <li><a href="./pages/pantalones.html">Pantalones</a></li>
-                                <li><a href="./pages/zapatillas.html">Zapatillas</a></li>
+                                <li><a href="../remeras.html">Remeras</a></li>
+                                <li><a href="../pantalones.html">Pantalones</a></li>
+                                <li><a href="../zapatillas.html">Zapatillas</a></li>
                             </ul>
                         </div>
                         <div class="footer-col">
