--- a/pages/zapatillas.html
+++ b/pages/zapatillas.html
@@ -31,9 +31,9 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="../pages/remeras.html">Remeras</a></li>
-                        <li class="nav-item"><a class="nav-link" href="../pages/pantalones.html">Pantalones</a></li>
-                        <li class="nav-item"><a class="nav-link" href="../pages/contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./remeras.html">Remeras</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pantalones.html">Pantalones</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
                     </ul>
                 </div>
                 </div>
@@ -44,70 +44,70 @@
             <section class="zapatillas">
                 <div class="productzapa">
                     <img src="https://nikearprod.vtexassets.com/arquivos/ids/155877-1000-1000?v=1770147328&width=1000&height=1000&aspect=true" alt="zapatillas celeste unisex">
-                    <h3>Black Paneter Skye Blue</h3>
+                    <h3>Black Panter Skye Blue</h3>
                     <p>$120</p>
                     <button class="buy-button"><a class="alink my-link" href="./Compras/compras.html">Comprar</a></button>
                 </div>
 
                 <div class="productzapa">
                     <img src="https://nikearprod.vtexassets.com/arquivos/ids/157900-1000-1000?v=1770213823&width=1000&height=1000&aspect=true" alt="zapatilla negras con detalles blancos unisex">
-                    <h3>Black Paneter Originals</h3>
+                    <h3>Black Panter Originals</h3>
                     <p>$140</p>
                     <button class="buy-button"><a class="alink my-link" href="./Compras/compras.html">Comprar</a></button>
                 </div>
 
                 <div class="productzapa">
                     <img src="https://nikearprod.vtexassets.com/arquivos/ids/157921-1000-1000?v=1770146802&width=1000&height=1000&aspect=true" alt="Zapatilla negra con detalles verdes unisex">
-                    <h3>Black Paneter Originals V2</h3>
+                    <h3>Black Panter Originals V2</h3>
                     <p>$210</p>
                     <button class="buy-button"><a class="alink my-link" href="./Compras/compras.html">Comprar</a></button>
                         </div>
 
                 <div class="productzapa">
                     <img src="https://nikearprod.vtexassets.com/arquivos/ids/157052-1000-1000?v=1770245046&width=1000&height=1000&aspect=true" alt="zapatilla naranja con botita">
-                    <h3>Black Paneter Sneakers Orange</h3>
+                    <h3>Black Panter Sneakers Orange</h3>
                     <p>$120</p>
                     <button class="buy-button"><a class="alink my-link" href="./Compras/compras.html">Comprar</a></button>
                 </div>
 
                 <div class="productzapa">
                     <img src="https://nikearprod.vtexassets.com/arquivos/ids/378788-1000-1000?v=1770226274&width=1000&height=1000&aspect=true" alt="zapatillas futuristas Aquamarina">
-                    <h3>Black Paneter FutureZ Aquamarine</h3>
+                    <h3>Black Panter FutureZ Aquamarine</h3>
                     <p>$200</p>
                     <button class="buy-button"><a class="alink my-link" href="./Compras/compras.html">Comprar</a></button>
                 </div>
                 
                 <div class="productzapa">
                     <img src="https://nikearprod.vtexassets.com/arquivos/ids/497662-1000-1000?v=1770234038&width=1000&height=1000&aspect=true" alt="zapatilla retro morado">
-                    <h3>Black Paneter Retro Purple</h3>
+                    <h3>Black Panter Retro Purple</h3>
                     <p>$120</p>
                     <button class="buy-button"><a class="alink my-link" href="./Compras/compras.html">Comprar</a></button>
                 </div>
 
                 <div class="productzapa">
                     <img src="https://nikearprod.vtexassets.com/arquivos/ids/158895-1000-1000?v=1770247142&width=1000&height=1000&aspect=true" alt="zapatilla grises con botita">
-                    <h3>Black Paneter Sneakers Grey</h3>
+                    <h3>Black Panter Sneakers Grey</h3>
                     <p>$120</p>
                     <button class="buy-button"><a class="alink my-link" href="./Compras/compras.html">Comprar</a></button>
                 </div>
 
                 <div class="productzapa">
                     <img src="https://nikearprod.vtexassets.com/arquivos/ids/156943-1000-1000?v=1770169002&width=1000&height=1000&aspect=true" alt="zapatilla azules con botita">
-                    <h3>Black Paneter Sneakers Blue</h3>
+                    <h3>Black Panter Sneakers Blue</h3>
                     <p>$300</p>
                     <button class="buy-button"><a class="alink my-link" href="./Compras/compras.html">Comprar</a></button>
                 </div>
 
                 <div class="productzapa">
                     <img src="https://nikearprod.vtexassets.com/arquivos/ids/440434-1000-1000?v=1770244872&width=1000&height=1000&aspect=true" alt="zapatilla futurista gris ">
-                    <h3>Black Paneter FutureZ Grey</h3>
+                    <h3>Black Panter FutureZ Grey</h3>
                     <p>$120</p>
                     <button class="buy-button"><a class="alink my-link" href="./Compras/compras.html">Comprar</a></button>
                 </div>
                 
                 <div class="productzapa">
                     <img src="https://nikearprod.vtexassets.com/arquivos/ids/451469-1000-1000?v=1770244206&width=1000&height=1000&aspect=true" alt="zapatilla con botita marrones">
-                    <h3>Black Paneter Sneakers brown</h3>
+                    <h3>Black Panter Sneakers brown</h3>
                     <p>$120</p>
                     <button class="buy-button"><a class="alink my-link" href="./Compras/compras.html">Comprar</a></button>
                 </div>    
