--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,29 +41,55 @@
         </nav>
     </header>
         <main>
-            <h1>Contact Us</h1>
-            <section>
-                <form action="#" method="post">
-                <label for="name">Nombre:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="email">Correo electrónico:</label>
-                <input type="email" id="email" name="email" required>
-                <label for="subject">Asunto:</label>
-                <input type="text" id="subject" name="subject" required>
-                <label for="message">Mensaje:</label>
-                <textarea id="message" name="message" required></textarea>
-                <button type="submit">Enviar</button>
-                </form>
+            <h1 id="principal">Contact Us</h1>
+            <section class="contact-section">
+                <div class="containers">
+                <div class="row">
+                    <div class="col-md-6">
+                    <div class="contact-form-container overflow-auto">
+                        <form class="contact-form">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Nombre:</label>
+                            <input type="text" id="name" name="name" class="form-control" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email:</label>
+                            <input type="email" id="email" name="email" class="form-control" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">Mensaje:</label>
+                            <textarea id="message" name="message" class="form-control" rows="5" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Enviar</button>
+                        </form>
+                    </div>
+                    </div>
+                    <div class="col-md-6">
+                    <h2>Información de contacto</h2>
+                    <ul class="contact-info">
+                        <li><i class="fas fa-map-marker-alt"></i> Dirección: Cabildo 840, Buenos Aires</li>
+                        <li><i class="fas fa-phone"></i> Teléfono: +54 1176093615</li>
+                        <li><i class="fas fa-envelope"></i> Email: BlackPanter@gmail.com</li>
+                    </ul>
+                    </div>
+                </div>
+                </div>
             </section>
         </main>
-        
+
+    <!-- separador -->
+        <br>
+        <br>
+        <div class="separador"></div>
+    <!-- separador -->
+    
                 <footer>
                     <div class="container">
                     <div class="footer-top">
                         <div class="footer-col">
                         <h3>Nuestros productos</h3>
                         <ul>
-                            <li><a class="hovernavhref="./remeras.html">Remeras</a></li>
+                            <li><a href="./remeras.html">Remeras</a></li>
                             <li><a href="./pantalones.html">Pantalones</a></li>
                             <li><a href="./zapatillas.html">Zapatillas</a></li>
                         </ul>
