--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <h3>aAcerca de nosotros</h3>
             <ul>
               <li><a href="./pages/quienes-somos/aboutUs.html">Quiénes somos</a></li>
-              <li><a href="/pages/quienes-somos/politicaPrivacidad.html">Política de privacidad</a></li>
+              <li><a href="./pages/quienes-somos/politicaPrivacidad.html">Política de privacidad</a></li>
               <li><a href="./pages/quienes-somos/terminosCondiciones.html">Términos y condiciones</a></li>
             </ul>
           </div>
