--- a/pages/pantalones.html
+++ b/pages/pantalones.html
@@ -103,7 +103,7 @@
                 <div class="footer-col">
                 <h3>Acerca de nosotros</h3>
                 <ul>
-                    <li><a href="./quienes-somos/aboutUs.htmls">Quiénes somos</a></li>
+                    <li><a href="./quienes-somos/aboutUs.html">Quiénes somos</a></li>
                     <li><a href="./quienes-somos/politicaPrivacidad.html">Política de privacidad</a></li>
                     <li><a href="./quienes-somos/terminosCondiciones.html">Términos y condiciones</a></li>
                 </ul>
