--- a/pages/quienes-somos/aboutUs.html
+++ b/pages/quienes-somos/aboutUs.html
@@ -56,9 +56,9 @@
                 <div class="footer-col">
                     <h3>Nuestros productos</h3>
                     <ul>
-                    <li><a href="./pages/remeras.html">Remeras</a></li>
-                    <li><a href="./pages/pantalones.html">Pantalones</a></li>
-                    <li><a href="./pages/zapatillas.html">Zapatillas</a></li>
+                    <li><a href="../remeras.html">Remeras</a></li>
+                    <li><a href="../pantalones.html">Pantalones</a></li>
+                    <li><a href="../zapatillas.html">Zapatillas</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
