--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             </ul>
           </div>
           <div class="footer-col">
-            <h3>aAcerca de nosotros</h3>
+            <h3>Acerca de nosotros</h3>
             <ul>
               <li><a href="./pages/quienes-somos/aboutUs.html">Quiénes somos</a></li>
               <li><a href="./pages/quienes-somos/politicaPrivacidad.html">Política de privacidad</a></li>
