--- a/pages/quienes-somos/aboutUs.html
+++ b/pages/quienes-somos/aboutUs.html
@@ -62,7 +62,7 @@
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h3>aAcerca de nosotros</h3>
+                    <h3>Acerca de nosotros</h3>
                     <ul>
                     <li><a href="./aboutUs.html">Quiénes somos</a></li>
                     <li><a href="./politicaPrivacidad.html">Política de privacidad</a></li>
