--- a/pages/Compras/compras.html
+++ b/pages/Compras/compras.html
@@ -72,7 +72,7 @@
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h3>aAcerca de nosotros</h3>
+                    <h3>Acerca de nosotros</h3>
                     <ul>
                     <li><a href="../quienes-somos/aboutUs.html">Quiénes somos</a></li>
                     <li><a href="../quienes-somos/politicaPrivacidad.html">Política de privacidad</a></li>
