--- a/pages/quienes-somos/politicaPrivacidad.html
+++ b/pages/quienes-somos/politicaPrivacidad.html
@@ -89,16 +89,14 @@
                                 <li><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDjGRfQSLC5UnOSLYa98sIdd9l1x8Oh_RJkA&usqp=CAU" alt="formas de pago" height="80px"></li>
                             </ul>
                         </div>
-                        <div class="footer-col">
+                        <div class="footer-col footer-bottom">
                             <h3>Síguenos en las redes</h3>
                             <ul class="social-links">
                             <li><a target="_blank" href="https://www.facebook.com/ModaEstiloMujeres/?locale=es_LA"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZQoISObILx3nB7qQTOWZwAtV0vTJAltk3Ow&usqp=CAU" alt="facebook logo" width="70px" height="70px"></a></li>
                             <li><a target="_blank" href="https://twitter.com/ropaaonlinee?lang=es"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRF5-JaFURlBz0w2nJJWzHlVZCZzEgev0oYjA&usqp=CAU" alt="twitter" width="70px" height="70px"></a></li>
                             </ul>
+                            <p>&copy; 2023 Tienda de Ropa. Todos los derechos reservados.</p>
                         </div>
-                        </div>
-                        <div class="footer-bottom">
-                        <p>&copy; 2023 Tienda de Ropa. Todos los derechos reservados.</p>
                         </div>
                     </div>
                 </footer>
