--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 <!-- css main -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <link rel="stylesheet" href="./css/estilos.css">
-
-<html>
 </head>
   <body>
     <div class="bodyc">
@@ -110,7 +108,7 @@
           </section>
         </article>
       
-        <article>
+        <article class="lastarticle">
           <section>
             <div class="containeracc">
               <div class="row">
@@ -146,8 +144,6 @@
         </article>
               
       <!-- separador -->
-      <br>
-      <br>
       <div class="separador"></div>
       <!-- separador -->
 
