--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,8 +16,8 @@
 <!-- css main -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <link rel="stylesheet" href="../css/estilos.css">
+</head>
 
-<html>
 <body>
     <div class="bodyc">
     <header id="headerfot">
@@ -77,12 +77,10 @@
             </section>
         </main>
 
-    <!-- separador -->
-        <br>
-        <br>
+        <!-- separador -->
         <div class="separador"></div>
-    <!-- separador -->
-    
+        <!-- separador -->
+
                 <footer>
                     <div class="container">
                     <div class="footer-top">
