--- a/pages/pantalones.html
+++ b/pages/pantalones.html
@@ -15,7 +15,7 @@
 <!-- css main -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <link rel="stylesheet" href="../css/estilos.css">
-<html>
+</head>
 <body>
     <div class="bodyc">
         <header id="headerfot">
@@ -41,7 +41,7 @@
         
         <main>
 
-            <h1 id="princi">Pantalones</h1>
+            <h1 id="principal">Pantalones</h1>
             <section class="pantalones">
 
                 <div class="productreme">
@@ -87,7 +87,7 @@
                 </div>
 
             </section>
-
+            
         </main>
         <footer>
             <div class="container">
