--- a/pages/zapatillas.html
+++ b/pages/zapatillas.html
@@ -16,7 +16,7 @@
 <!-- css main -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <link rel="stylesheet" href="../css/estilos.css">
-<html>
+</head>
 <body>
     <div class="bodyc">
         <header id="headerfot">
@@ -40,7 +40,7 @@
             </nav>
         </header>
         <main>
-            <h1>Zapatillas</h1>
+            <h1 id="principal">Zapatillas</h1>
             <section class="zapatillas">
                 <div class="productzapa">
                     <img src="https://nikearprod.vtexassets.com/arquivos/ids/155877-1000-1000?v=1770147328&width=1000&height=1000&aspect=true" alt="zapatillas celeste unisex">
