--- a/pages/zapatillas.html
+++ b/pages/zapatillas.html
@@ -112,6 +112,9 @@
             <div class="container">
             <div class="footer-top">
                 <div class="footer-col">
+                    <ul>
+                        <li class="liindex"><a href="../index.html">Inicio</a></li>
+                    </ul>
                 <h3>Nuestros productos</h3>
                 <ul>
                     <li><a href="./remeras.html ">Remeras</a></li>
