--- a/pages/quienes-somos/aboutUs.html
+++ b/pages/quienes-somos/aboutUs.html
@@ -50,11 +50,16 @@
                 <p class="pos">En nuestra tienda encontrarás una amplia selección de ropa para hombres y mujeres, incluyendo camisetas, sudaderas, pantalones, zapatillas y accesorios. Nos apasiona la moda y nos esforzamos por mantenernos actualizados con las últimas tendencias y estilos.</p>
             </div>
             </section>
+
         </main>
+    
         <footer>
             <div class="container">
                 <div class="footer-top">
                 <div class="footer-col">
+                    <ul>
+                        <li class="liindex"><a href="../../index.html">Inicio</a></li>
+                    </ul>
                     <h3>Nuestros productos</h3>
                     <ul>
                     <li><a href="../remeras.html">Remeras</a></li>
@@ -95,4 +100,5 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
+
 </html>
