--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </button>
           <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav ms-auto">
+              <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
               <li class="nav-item"><a class="nav-link" href="./pages/remeras.html">Remeras</a></li>
               <li class="nav-item"><a class="nav-link" href="./pages/zapatillas.html">Zapatillas</a></li>
               <li class="nav-item"><a class="nav-link" href="./pages/pantalones.html">Pantalones</a></li>
