--- a/pages/pantalones.html
+++ b/pages/pantalones.html
@@ -32,6 +32,7 @@
                         <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="./remeras.html">Remeras</a></li>
                         <li class="nav-item"><a class="nav-link" href="./zapatillas.html">Zapatillas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pantalones.html">Pantalones</a></li>
                         <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
                     </ul>
                 </div>
