--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -35,6 +35,7 @@
                     <li class="nav-item"><a class="nav-link" href="../pages/remeras.html">Remeras</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/zapatillas.html">Zapatillas</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/pantalones.html">Pantalones</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
                 </ul>
             </div>
             </div>
