--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -30,6 +30,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./remeras.html">Remeras</a></li>
                         <li class="nav-item"><a class="nav-link" href="./zapatillas.html">Zapatillas</a></li>
                         <li class="nav-item"><a class="nav-link" href="./pantalones.html">Pantalones</a></li>
                         <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
